[#38] Adds controller advice for PatientControllerValidationException